<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.EntryFragment">


    <EditText
        android:id="@+id/et_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/selector_shape_input"
        android:hint="@string/please_input_cast"
        android:singleLine="true"
        android:textColor="@color/normal_text"
        android:textColorHint="?attr/hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_input"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/beg"
        android:textColor="@color/normal_text"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_chooser"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_shape_button"
        android:text="@string/sure"
        android:textColor="@color/white" />

</RelativeLayout>




